service.yaml
kind: Service
apiVersion: v1
metadata:
  name: reports
spec:
  type: ExternalName
  externalName: multilayer-reports.s3-website-eu-west-1.amazonaws.com
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
