ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.aws.multilayer.io/oauth2/start?rd=https://reports.aws.multilayer.io
    nginx.ingress.kubernetes.io/auth-url: https://oauth.aws.multilayer.io/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-vhost: multilayer-reports.s3-website-eu-west-1.amazonaws.com
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  labels:
    app: reports
  name: reports
spec:
  ingressClassName: nginx
  rules:
  - host: reports.aws.multilayer.io
    http:
      paths:
      - backend:
          service:
            name: reports
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - reports.aws.multilayer.io
    secretName: reports-letsencrypt
